--- a/index.htm
+++ b/index.htm
@@ -9,16 +9,28 @@
     <script src='main.js'></script>
 </head>
 <body>
+    <div class="ag-smoke_smoke ag-smoke_smoke-1-1"></div>
+    <div class="js-smoke_smoke ag-smoke_smoke ag-smoke_smoke-1-2"></div>
+  
+    <div class="ag-smoke_smoke_box">
+      <div class="ag-smoke_smoke-2 ag-smoke_smoke-2-1"></div>
+      <div class="ag-smoke_smoke-2 ag-smoke_smoke-2-2"></div>
+      <div class="ag-smoke_smoke-2 ag-smoke_smoke-2-3"></div>
+      <div class="ag-smoke_smoke-2 ag-smoke_smoke-2-4"></div>
+      <div class="ag-smoke_smoke-2 ag-smoke_smoke-2-5"></div>
+      <div class="ag-smoke_smoke-2 ag-smoke_smoke-2-6"></div>
+    </div>
     <div class="box">
+
         <div class="circle"><img src="sa.jpg" height="200" width="300"/></div>
         <h3>P Sathya Narayan</h3>
         <h6>Student</h6>
-        <div class="anchor">
-            <a id="port" style="background: rgb(250, 249, 249);" href="https://psathyanarayan.tech/">Portfolio</a>
-            <a style="background: rgb(250, 249, 249);" href="https://sathyanmbpk.medium.com/">Blog</a>
-            <a style="background: rgb(250, 249, 249);" href="https://www.youtube.com/sathyanarayanp">Tutorials</a>
-            <a style="background: rgb(250, 249, 249);" href="http://rss.com/podcasts/sathya/">My Podcast</a>
-            <a style="background: rgb(250, 249, 249);" href="https://linktr.ee/psathyanarayan">Contact Me</a>
+        <div class="anchor" style="background:none;">
+            <a id="port"  href="https://psathyanarayan.tech/" target="_blank">Portfolio</a>
+            <a  href="https://sathyanmbpk.medium.com/" target="_blank" >Blog</a>
+            <a  href="https://www.youtube.com/sathyanarayanp"target="_blank">Tutorials</a>
+            <a  href="http://rss.com/podcasts/sathya/"target="_blank">My Podcast</a>
+            <a  href="https://linktr.ee/psathyanarayan"target="_blank">Contact Me</a>
         </div>
     </div>
 </body>
