--- a/index.html
+++ b/index.html
@@ -7,31 +7,25 @@
     <title>P Sathya Narayan</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='index.css'>
-    
-</head>
-<body>
-    <div class="ag-smoke_smoke ag-smoke_smoke-1-1"></div>
-    <div class="js-smoke_smoke ag-smoke_smoke ag-smoke_smoke-1-2"></div>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+   
   
-    <div class="ag-smoke_smoke_box">
-      <div class="ag-smoke_smoke-2 ag-smoke_smoke-2-1"></div>
-      <div class="ag-smoke_smoke-2 ag-smoke_smoke-2-2"></div>
-      <div class="ag-smoke_smoke-2 ag-smoke_smoke-2-3"></div>
-      <div class="ag-smoke_smoke-2 ag-smoke_smoke-2-4"></div>
-      <div class="ag-smoke_smoke-2 ag-smoke_smoke-2-5"></div>
-      <div class="ag-smoke_smoke-2 ag-smoke_smoke-2-6"></div>
-    </div>
-    <div class="box">
+</head>
 
-        <div class="circle"><img src="sa.jpg" height="200" width="300"/></div>
-        <h3>P Sathya Narayan</h3>
-        <h6>Student</h6>
-        <div class="anchor" style="background:none;">
-            <a id="port"  href="https://psathyanarayan.tech/" target="_blank">Portfolio</a>
-            <a  href="https://sathyanmbpk.medium.com/" target="_blank" >Blog</a>
-            <a  href="https://www.youtube.com/sathyanarayanp"target="_blank">Tutorials</a>
-            <a  href="http://rss.com/podcasts/sathya/"target="_blank">My Podcast</a>
-            <a  href="https://linktr.ee/psathyanarayan"target="_blank">Contact Me</a>
+<body >
+    
+    <div  class="box animated animatedFadeInUp fadeInUp"  >
+
+        <div class="circle fade-in"><img src="sa.jpg" height="200" width="300"/></div>
+        <h3 class="animated animatedFadeInUp fadeInUp">P Sathya Narayan</h3>
+        <h6 class="animated animatedFadeInUp fadeInUp">Student</h6>
+        <div   class="anchor fadeInRight " style="background:none;">
+            <a class="animated fadeInRight"  id="port"  href="https://psathyanarayan.tech/" target="_blank">Portfolio</a>
+            <a class="animated fadeInRight"  href="https://sathyanmbpk.medium.com/" target="_blank" >Blog</a>
+            <a class="animated fadeInRight"  href="https://www.youtube.com/sathyanarayanp"target="_blank">Tutorials</a>
+            <a class="animated fadeInRight"  href="http://rss.com/podcasts/sathya/"target="_blank">My Podcast</a>
+            <a class="animated fadeInRight"  href="https://linktr.ee/psathyanarayan"target="_blank">Contact Me</a>
         </div>
     </div>
 </body>
