--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <h3 class="animated animatedFadeInUp fadeInUp">P Sathya Narayan</h3>
         <h6 class="animated animatedFadeInUp fadeInUp">Student</h6>
         <div   class="anchor fadeInRight " style="background:none;">
-            <a class="animated fadeInRight"  id="port"  href="https://psathyanarayan.tech/" target="_blank">Portfolio</a>
-            <a class="animated fadeInRight"  href="https://sathyanmbpk.medium.com/" target="_blank" >Blog</a>
+          <!--   <a class="animated fadeInRight"  id="port"  href="https://psathyanarayan.tech/" target="_blank">Portfolio</a> -->
+            <a class="animated fadeInRight"  href="https://psathya.herokuapp.com/" target="_blank" >Blog</a>
             <a class="animated fadeInRight"  href="https://www.youtube.com/sathyanarayanp"target="_blank">Tutorials</a>
             <a class="animated fadeInRight"  href="http://rss.com/podcasts/sathya/"target="_blank">My Podcast</a>
             <a class="animated fadeInRight"  href="https://linktr.ee/psathyanarayan"target="_blank">Contact Me</a>
